src/pydjinni/generator/java/it/java/error/expected/java/test/error/FooError.java
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
package test.error;

/**
 * error comment
 */
public abstract class FooError extends Exception {
    public FooError(String message) {
        super(message);
    }
    /**
     * error code comment
     */
    public final static class SomethingWrong extends FooError {
        public SomethingWrong(
        ) {
            this(null);
        }

        public SomethingWrong(
            String message
        ) {
            super(message);
        }

    }
    public final static class SomethingElseWrong extends FooError {
        public SomethingElseWrong(
        ) {
            this(null);
        }

        public SomethingElseWrong(
            String message
        ) {
            super(message);
        }

    }
    /**
     * an error with parameters
     * 
     * @param parameter is an important additional information
     */
    public final static class SomethingWithParameters extends FooError {
        /**
         * is an important additional information
         */
        final byte parameter;
        public SomethingWithParameters(
            byte parameter
        ) {
            this(parameter, null);
        }

        public SomethingWithParameters(
            byte parameter,
            String message
        ) {
            super(message);
            this.parameter = parameter;
        }

        /**
         * is an important additional information
         */
        public byte getParameter() { return parameter; }
    }
}
